# autopilot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .ty-baseline.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR.md  Dockerfile.bot  Dockerfile.omniparser  Dockerfile.web  LICENSE  README.md  SECURITY.md  app.py  area.json  conftest.py  deep-research-report.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  radar_config.yaml  whiteout_survival_gen_1_hero_progression_plan_yaml.md  wos-bot-popup-detector-prompt.md  wos_optimizer_ui_final.md  you-at-example-com.wos-license.json
.cursor/: mcp.json
.cursor/rules/: python-uv.mdc  wos-overlay-actions.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
account/: switcher.py
actions/: ad_skip.py  human.py  recovery.py  tap.py
analysis/: __init__.py  overlay.py  overlay_engine.py  overlay_manifest.py  overlay_rules.py
analyze/: analyze.yaml
capture/: adb_screencap.py  window.py
century/: api.py  captcha.py
cmd/: calibrate_heroes_grid.py  download_wiki_images.py  generate_upgrade_scenarios.py  gift_code.py  migrate_area_versions.py  split_buildings_yaml.py  sync_balance_sheet.py  sync_buildings_wiki.py  sync_hero_recruitment_resources.py  sync_heroes_wiki.py  sync_items_wiki.py  test_heroes_grid_match.py
config/: buildings.py  devices.py  events.py  heroes.py  items.py  loader.py  log_ansi.py  log_context.py  logging_stdout.py  module_registry.py  redis_health.py  reference_naming.py  settings.yaml  startup_validation.py  state_schema.py  state_store.py
debug/: timeline.py
fsm/: machine.py  states.py
gift/: models.py  redeemer.py  scraper.py
grafana/: README.md  autopilot_telemetry.json  wos_bot_telemetry.json
layout/: area_lookup.py  area_manifest.py  area_regions.py  area_versions.py  bbox_percent.py  color_bucket.py  crop_paths.py  red_dot_detector.py  screens.py  tab_active_detector.py  template_match.py  white_border_detector.py
modules/: README_WIKI.md  __init__.py
navigation/: detector.py  edge_taps.yaml  event_blocks_resolver.py  fsm_screen_map.py  hero_grid_resolver.py  hero_grid_search.py  navigator.py  screen_graph.py  screen_verify.yaml
notify_monitor/: README.md  __main__.py  app.py  config.py  db.py  migrations.py  parser.py  publisher.py  service.py  state_lookup.py
ocr/: Dockerfile  client.py  fuzzy.py  paddle_extract.py  preprocess.py  service.py
optimizer/: __init__.py  candidates.py  capacities.py  context.py  dispatcher.py  executor.py  hard_rules.py  history.py  reasons.py  scorer.py  solver.py  types.py
references/: analyze.yaml
scenarios/: alliance_war.yaml  arena_rush.yaml  cron_specs.py  daily_routine.yaml  dsl_schema.py  evaluator.py  loader.py  models.py  new_player.yaml  read_mail.yaml  registry.py  resource_rush.yaml  template_resolver.py
scheduler/: optimizer.py  ortools_executor.py  queue.py  runner.py  wake.py
scripts/: bench_player_id_easyocr_sidecar.py  bench_player_id_ocr.py  bench_screencap.py  build_knn_digital_dataset.py  compile_protected.sh  decrypt_databases.py  derive_building_requires.py  doctor.ps1  encrypt_databases.py  experiment_welcome_back_phash.py  label_bundle.py  migrate_event_icons.py  migrate_root_references.py  migrate_title_ocr.py  queue_explain.py  regression_phash_blur_shop.py  regression_phash_blur_shop_extra.py  strip_redundant_screen_verify_landmarks.py  train_knn_digital_model.py  ty_ratchet.py
tasks/: arena.py  base.py  beast.py  daily.py  defend.py  dsl_exec.py  dsl_match_mixin.py  dsl_ocr_mixin.py  dsl_persist_mixin.py  dsl_scenario.py  dsl_scenario_execute_mixin.py  dsl_scenario_helpers.py  dsl_scenario_inline_mixin.py  dsl_scenario_override.py  dsl_scenario_preempt_mixin.py  gathering.py  is_new_people.py  mail.py  mail_gift_check.py  main_city_check.py  overlay_tap.py  page_detect.py  training.py
tests/: conftest.py  conftest_nav.py  di_factories.py  test_analyze_skip_overlay.py  test_area_versions.py  test_async_supervisor_backoff.py  test_bbox_percent_random_point.py  test_big_claim_button_fixture.py  test_bot_actions_frame_cache.py  test_bot_services_shutdown.py  test_click_approvals.py  test_click_approvals_labeling_link.py  test_click_approvals_pending_stale.py  test_color_check_is_has_new_mail.py  test_crash_logging.py  test_cron_specs.py  test_crop_template_match.py  test_dashboard_events_invalidate.py  test_dashboard_events_throttle.py  test_dashboard_rev.py  test_dashboard_stream.py  test_debug_scenarios_list.py  test_debug_timeline.py  test_dedupe_version_regions.py  test_digit_markers.py  test_dreamscape_onboarding.py  test_dsl_break_repeat.py  test_dsl_color_check.py  test_dsl_cond.py  test_dsl_exec_detect_screen.py  test_dsl_exec_put_all_red_dots.py  test_dsl_is_red_dot.py  test_dsl_is_tab_active.py  test_dsl_is_white_border.py  test_dsl_long_click.py  test_dsl_loop.py  test_dsl_match_guard.py  test_dsl_ocr_step.py  test_dsl_ocr_store_autoclear.py  test_dsl_ocr_type_time.py  (+108 more)
ui/: Dockerfile  adb_query.py  adb_reference_shot.py  annotator.py  app.py  area_annotator.py  bot_services.py  keys.py  labeling_gallery_query.py  labeling_reference_panel.py  labeling_refresh_target.py  labeling_version_redirect.py  notifications.py  overlay_yaml_sync.py  preview_display.py  redis_client.py  reference_area_sync.py  reference_preview.py  reference_tree.py  scenario_keys.py  settings_state.py  streamlit_canvas_compat.py  wiki_module.py
web/: .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  proxy.test.ts  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
worker/: async_supervisor.py  game_health_watchdog.py  instance_worker.py  instance_worker_blocking.py  instance_worker_health.py  instance_worker_overlay.py  instance_worker_redis.py  instance_worker_rolling.py  instance_worker_screen.py  instance_worker_tasks.py  instance_worker_ui.py  launch.py  redis_log_handler.py  restart_backoff.py  supervisor.py
(+3909 files in other folders)
