[project]
name = "whiteout-survival-autopilot"
version = "0.1.0"
description = "Multi-account Whiteout Survival automation bot"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "ortools>=9.10",
    "rapidfuzz>=3.9",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "watchdog>=4.0",
    "psutil>=5.9",
    "numpy>=1.26",
    "networkx>=3.2",
    "opencv-python>=4.9",
    "ddddocr>=1.4",
    "beautifulsoup4>=4.12",
    "streamlit>=1.39",
    "streamlit-autorefresh>=1.0",
    # Local fork — actual install path is controlled by [tool.uv.sources] below.
    "streamlit-drawable-canvas",
    "st-ant-tree>=0.0.16",
    "pillow>=10.0",
    "streamlit-react-flow>=0.1.0",
    "streamlit-dnd-sortable>=0.1.0",
    "streamlit-nested-table>=0.1.0",
    "streamlit-extras>=1.5.0",
    "python-dotenv>=1.2.2",
    "roboflow>=1.3.8",
    "openai>=2.36.0",
    "diskcache>=5.6.3",
    "mcp>=1.27.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.14.2",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "fastapi>=0.111",
    "syrupy>=5.2.0",
    "pytest-mock>=3.15.1",
    "pytest-clarity>=1.0.1",
]
ui = [
    "streamlit>=1.39",
    "streamlit-autorefresh>=1.0",
    # Local fork — actual install path is controlled by [tool.uv.sources] below.
    "streamlit-drawable-canvas",
    "st-ant-tree>=0.0.16",
    "pillow>=10.0",
    "streamlit-react-flow>=0.1.0",
    "streamlit-dnd-sortable>=0.1.0",
    "streamlit-nested-table>=0.1.0",
]
annotator = [
    "streamlit>=1.39",
    # Local fork — actual install path is controlled by [tool.uv.sources] below.
    "streamlit-drawable-canvas",
    "pillow>=10.0",
]
omniparser = [
    "accelerate>=1.13.0",
    "easyocr>=1.7.2",
    "einops==0.8.0",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.3.1",
    "supervision==0.18.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers==4.46.3",
    "ultralytics>=8.4.51",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
wos = "worker.launch:main"
wos-bot = "worker.supervisor:main"
wos-ia-editor = "worker.ia_editor:main"
wos-mcp = "wos_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
# Transitive deps pull ``opencv-python``, ``opencv-python-headless``, and/or
# ``opencv-contrib-python`` side-by-side — they all install into the same ``cv2``
# namespace and leave a broken stub (no ``imdecode``, etc.). We ship one OpenCV
# wheel from ``dependencies`` and strip duplicate requirements from metadata.
dependency-metadata = [
    { name = "albucore", version = "0.0.24", requires-dist = ["numpy", "simsimd", "stringzilla"] },
    { name = "albumentations", version = "2.0.8", requires-dist = ["albucore", "numpy", "pydantic", "pyyaml", "scipy"] },
    { name = "ddddocr", version = "1.6.1", requires-dist = ["numpy", "onnxruntime", "pillow"] },
    { name = "easyocr", version = "1.7.2", requires-dist = ["ninja", "numpy", "pillow", "pyclipper", "python-bidi", "pyyaml", "scikit-image", "scipy", "shapely", "torch", "torchvision"] },
    { name = "paddleocr", version = "2.10.0", requires-dist = ["albucore", "albumentations", "beautifulsoup4", "cython", "fire", "fonttools", "lmdb", "numpy", "pillow", "pyclipper", "python-docx", "pyyaml", "rapidfuzz", "requests", "scikit-image", "shapely", "tqdm"] },
    { name = "roboflow", version = "1.3.8", requires-dist = ["certifi", "cycler", "filetype", "idna", "kiwisolver", "matplotlib", "numpy", "pi-heif", "pillow", "pillow-avif-plugin", "python-dateutil", "python-dotenv", "pyyaml", "requests", "requests-toolbelt", "six", "tqdm", "typer", "urllib3"] },
    { name = "ultralytics", version = "8.4.51", requires-dist = ["matplotlib", "numpy", "pillow", "polars", "psutil", "pyyaml", "requests", "scipy", "torch", "torchvision", "ultralytics-thop"] },
]

[tool.uv.sources]
# Local forks — rebuild frontends after TS/React edits:
#   streamlit-drawable-canvas: …/streamlit_drawable_canvas/frontend && npm run build
#   streamlit-nested-table: …/streamlit_nested_table/frontend && npm run build
#   streamlit-react-flow: …/streamlit_react_flow/frontend && npm run build
#   streamlit-dnd-sortable: …/streamlit_dnd_sortable/frontend && npm run build
streamlit-drawable-canvas = { path = "streamlit-plugin/streamlit-drawable-canvas", editable = true }
streamlit-nested-table = { path = "streamlit-plugin/streamlit-nested-table", editable = true }
streamlit-react-flow = { path = "streamlit-plugin/streamlit-react-flow", editable = true }
streamlit-dnd-sortable = { path = "streamlit-plugin/streamlit-dnd-sortable", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
    "src/analysis",
    "src/adb",
    "src/century",
    "src/config",
    "src/layout",
    "src/services",
    "src/navigation",
    "src/omniparser",
    "src/ocr",
    "src/optimizer",
    "src/scheduler",
    "src/scenarios",
    "src/tasks",
    "src/ui",
    "src/worker",
    "src/wos_mcp",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests", "modules", "cmd"]
# Vendored third-party fork — lint upstream, not us.
extend-exclude = [
    "streamlit-plugin/streamlit-drawable-canvas",
    "streamlit-plugin/streamlit-nested-table",
    "streamlit-plugin/streamlit-react-flow",
    "streamlit-plugin/streamlit-dnd-sortable",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
# Re-export helpers and tap/overlay symbols for tests that monkeypatch ``tasks.dsl_scenario``.
"src/tasks/dsl_scenario.py" = ["F401"]
# Tests: relaxed typing and long golden / inline YAML strings.
"tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "E501"]
"modules/**/tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "E501"]
# Canvas compat patch must run before importing ``streamlit_drawable_canvas``.
"src/ui/area_annotator.py" = ["E402"]

[tool.ty]
# Strategy: baseline + ratchet (see scripts/ty-ratchet.py).
# 1164 pre-existing diagnostics frozen at the snapshot date — the CI gate
# fails only if a file's diagnostic count goes UP relative to the
# baseline (.ty-baseline.json). Touching a file is allowed; making it
# worse is not.

[tool.ty.src]
exclude = [
    "streamlit-plugin/streamlit-drawable-canvas",
    "streamlit-plugin/streamlit-nested-table",
    "streamlit-plugin/streamlit-react-flow",
    "streamlit-plugin/streamlit-dnd-sortable",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# redis-py's async client returns Awaitable[...], but the stubs union it
# with the sync return — ty sees `Awaitable[T] | T` and flags every
# `await client.method(...)`. Suppressing globally rather than per-call
# is the lesser evil until stubs improve.
invalid-await = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests", "modules"]
# pytest-clarity: colourful assertion diffs (needs -vv; CI uses ``pytest -q``).
addopts = ["-vv"]
# Upstream RedisContainer still uses @wait_container_is_ready (deprecated) until
# testcontainers-python 4.15+; silence import-time noise from the vendored module.
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.redis",
]
markers = [
    "integration: requires external services (OCR backend, Redis via testcontainers, ADB, etc.)",
]
