[project]
name = "autopilot"
version = "0.1.0"
description = "Multi-account Whiteout Survival automation bot"
requires-python = ">=3.13"
dependencies = [
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "ortools>=9.10",
    "rapidfuzz>=3.9",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "psutil>=5.9",
    "numpy>=1.26",
    "networkx>=3.2",
    "opencv-python>=4.9",
    "ddddocr>=1.4",
    "beautifulsoup4>=4.12",
    "pillow>=10.0",
    "python-dotenv>=1.2.2",
    "openai>=2.36.0",
    "diskcache>=5.6.3",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "pyroscope-io>=0.8",
    "pyroscope-otel>=0.4",
    "fastapi>=0.111",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.46.0",
    "pyjwt[crypto]>=2.9",
    "av>=12.0",
    "sqlmodel>=0.0.22",
    "sqlcipher3-wheels>=0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.14.2",
    "fastapi>=0.111",
    "syrupy>=5.2.0",
    "pytest-mock>=3.15.1",
    "pytest-clarity>=1.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "jsonschema>=4.21",
]
# Used by the Docker build to compile selected packages (licensing, worker, …)
# to native ``*.so`` extensions via ``scripts/compile_protected.sh``. Not needed
# at runtime; only the produced ``.so`` files ship.
compile = [
    "nuitka>=2.5",
    "ordered-set>=4.1",
]
# Browser automation for the R5/owner-only farm registration flow (the operator
# solves the captcha; Playwright only fills the form). Optional — not needed at
# runtime for the bot. After installing, run `playwright install chromium`.
farm = [
    "playwright>=1.40",
]
[project.scripts]
play = "worker.launch:main"
bot = "worker.supervisor:main"
api = "api.main:main"
issue-license = "licensing.cli:main"
gen-license-keypair = "licensing.keypair_cli:main"
radar = "modules.radar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
# ddddocr imports onnxruntime unconditionally for gift-code CAPTCHA solving.
# Keep it pinned across platforms; newer onnxruntime releases may not ship all
# wheels this project supports.
override-dependencies = [
    "onnxruntime==1.23.2",
]
# Transitive deps pull ``opencv-python``, ``opencv-python-headless``, and/or
# ``opencv-contrib-python`` side-by-side — they all install into the same ``cv2``
# namespace and leave a broken stub (no ``imdecode``, etc.). We ship one OpenCV
# wheel from ``dependencies`` and strip duplicate requirements from metadata.
dependency-metadata = [
    { name = "albucore", version = "0.0.24", requires-dist = ["numpy", "simsimd", "stringzilla"] },
    { name = "albumentations", version = "2.0.8", requires-dist = ["albucore", "numpy", "pydantic", "pyyaml", "scipy"] },
    { name = "ddddocr", version = "1.6.1", requires-dist = ["numpy", "onnxruntime", "pillow"] },
    { name = "roboflow", version = "1.3.8", requires-dist = ["certifi", "cycler", "filetype", "idna", "kiwisolver", "matplotlib", "numpy", "pi-heif", "pillow", "pillow-avif-plugin", "python-dateutil", "python-dotenv", "pyyaml", "requests", "requests-toolbelt", "six", "tqdm", "typer", "urllib3"] },
    { name = "ultralytics", version = "8.4.51", requires-dist = ["matplotlib", "numpy", "pillow", "polars", "psutil", "pyyaml", "requests", "scipy", "torch", "torchvision", "ultralytics-thop"] },
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/analysis",
    "src/adb",
    "src/century",
    "src/config",
    "src/layout",
    "src/services",
    "src/navigation",
    "src/ocr",
    "src/optimizer",
    "src/scheduler",
    "src/dsl",
    "src/inference",
    "src/popup",
    "src/tasks",
    "src/dashboard",
    "src/worker",
    "src/api",
    "src/licensing",
    "src/modules",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests", "games", "cmd"]
extend-exclude = [
    # Generated by ``uv run stubgen`` — long lines are inherent to the format.
    "stubs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "C4", "PIE", "RET", "PT", "LOG", "RUF", "PERF", "ISC", "DTZ", "TC", "BLE", "ARG", "ASYNC", "NPY", "A", "PGH", "FURB", "PTH", "EM", "TRY", "SLF", "G"]
ignore = [
    "ANN401",
    # Typographic glyphs are intentional in docstrings / log strings:
    # ``1280×720`` (×, U+00D7) reads cleaner than ``1280x720``, em-dash
    # in prose, ``ℹ`` in UI captions, etc.
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    # ``int(round(...))`` is defensive style for pixel math / OpenCV interop —
    # ``round()`` returns int today but documents intent and survives refactors.
    "RUF046",  # unnecessary-cast-to-int
    # Narrow ``assert _redis is not None and _queue is not None`` style is
    # intentional in callsites that need both invariants for a single block.
    "PT018",   # pytest-composite-assertion
    # ``mocker.patch.object(.., new=lambda ..: x)`` is the legitimate form when
    # the patched symbol is called and must return a value (``return_value=`` only
    # works on ``MagicMock`` autospec).
    "PT008",   # pytest-patch-with-lambda
    # The ``_``-prefix already signals an unused-but-needed fixture; rewriting
    # every test to ``@pytest.mark.usefixtures(...)`` would just be churn.
    "PT019",   # pytest-fixture-param-without-value
    # ``except Exception: logger.debug("...", exc_info=True)`` is the project's
    # chosen idiom for defensive paths (Redis flaps, file I/O, OCR drift). Ruff
    # only accepts ``logger.exception(...)`` (ERROR-level) which would be far
    # too loud for paths where failure is *expected* and recovered.
    "BLE001",  # blind-except
    # ARG001/002 fire on callback signatures, abstract method overrides, pytest
    # hooks, and mock substitutions where the parameter is required by the
    # contract but not used by this implementation. Underscore-prefixing every
    # such param across hundreds of sites would be pure churn. ARG005 (lambdas)
    # stays on — those are easy point fixes.
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument
    # ``Path.exists()`` / ``.is_file()`` / ``.read_text()`` inside async
    # functions block the event loop, but the cost is microseconds for
    # metadata calls and a one-shot config load. Migrating to ``aiofiles``
    # would introduce a runtime dep for a non-issue at this codebase's
    # workload (no hot-path file I/O in async tasks).
    "ASYNC240", # blocking-path-method-in-async-function
    # The codebase uses ``_underscore`` for module-internal API (re-exporters
    # like ``tasks.dsl_scenario._redis()``, mixin host attrs, fake objects in
    # IA overlay executor). All current access is intentional intra-package
    # coupling; the rule's actual value (cross-package leakage into third-party
    # code) doesn't apply at this codebase's boundary granularity.
    "SLF001",  # private-member-access
    # TRY003 fires on every ``raise ValueError("msg")`` and wants a custom
    # exception class per message. Codebase chooses message-driven errors with
    # context in the message body, not type hierarchies. EM101/102 (now in the
    # fixed set) already give us clean tracebacks by hoisting the message.
    "TRY003",  # raise-vanilla-args
    # ``try: ... except: ... `` *can* be a ``try: ... else: ...`` per TRY300,
    # but the "code that runs after success" pattern is often clearer inline
    # than as an ``else`` clause, especially around early-return / multi-line
    # bodies. Style not bug.
    "TRY300",  # try-consider-else
]

[tool.ruff.lint.per-file-ignores]
# Re-export helpers and tap/overlay symbols for tests that monkeypatch ``tasks.dsl_scenario``.
"src/tasks/dsl_scenario.py" = ["F401"]
# Tests: relaxed typing, long golden / inline YAML strings, and intentional
# private-member access (``obj._foo``) for white-box assertions on the unit
# under test — that's literally what unit tests are for.
"tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "E501", "SLF001"]
"games/**/tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "E501", "SLF001"]
"src/modules/**/tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "E501", "SLF001"]

[tool.ty]
# Strategy: baseline + ratchet (see scripts/ty-ratchet.py).
# 1164 pre-existing diagnostics frozen at the snapshot date — the CI gate
# fails only if a file's diagnostic count goes UP relative to the
# baseline (.ty-baseline.json). Touching a file is allowed; making it
# worse is not.

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# redis-py's async client returns Awaitable[...], but the stubs union it
# with the sync return — ty sees `Awaitable[T] | T` and flags every
# `await client.method(...)`. Suppressing globally rather than per-call
# is the lesser evil until stubs improve.
invalid-await = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests", "games", "src/modules"]
# pytest-sugar: progress + one-line failures; pytest-clarity: coloured diffs at -vv.
# pytest-timeout: per-test limit; integration tests get 180s in conftest.py.
# CI uses ``pytest -q`` (disables sugar/clarity; timeouts still apply).
addopts = ["-vv"]
timeout = 60
# thread: avoid SIGALRM + tests that patch signal.signal (see test_bot_services_shutdown).
timeout_method = "thread"
timeout_func_only = true
session_timeout = 1200
# Upstream RedisContainer still uses @wait_container_is_ready (deprecated) until
# testcontainers-python 4.15+; silence import-time noise from the vendored module.
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.redis",
]
markers = [
    "integration: requires external services (OCR backend, Redis via testcontainers, ADB, etc.); 180s timeout",
    "timeout(timeout, method=None, func_only=False): per-test timeout override (pytest-timeout)",
]
